Avoid using deprecated method File.toURL().